--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "paypal-rest-sdk": "^1.8.1",
+    "stripe": "^8.156.0",
     "validator": "^13.1.17"
   },
   "author": "",
