--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,13 @@
     "next": "10.0.9",
     "next-redux-wrapper": "^5.0.0",
     "popper.js": "^1.16.1",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.3",
+    "react-toastify": "^7.0.4",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
