--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.4.1",
+    "countries-code": "^1.1.0",
     "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
     "next": "10.0.9",
