--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.8.0",
     "@paypal/checkout-server-sdk": "^1.0.2",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
@@ -19,12 +20,13 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "is-empty": "^1.2.0",
-    "jade": "~1.11.0",
+    "jade": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.6",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "multer-azure-storage": "^0.2.0",
     "nodemailer": "^6.6.2",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
