--- a/admin/package.json
+++ b/admin/package.json
@@ -39,6 +39,7 @@
     "enzyme": "^3.11.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
+    "querystring": "^0.2.1",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.1",
